# delivery_service

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 600ca47fa8c3_initial_migration.py
src/: pytest.ini
src/app/: config.py  error_handlers.py  exceptions.py  main.py
src/app/api/v1/routes/: parcels.py
src/app/db/: init_data.py  postge_session.py  redis_session.py  session.py
src/app/models/: parcel_delivery.py  parcel_type.py  parcels.py  user.py  user_parcel.py
src/app/repositories/: exchange_rate_repository.py  parcel_repository.py  user_session_repository.py
src/app/schemas/: parcel.py
src/app/services/: currency_service.py  parcel_service.py  user_session_service.py
src/app/utils/: logging_config.py  parcel_worker.py  rabbitmq.py
src/tests/: conftest.py  test_parcels.py
