[tool.poetry]
name = "delivery-service"
version = "0.1.0"
description = ""
authors = ["Alex <es01@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
psycopg2-binary = "^2.9.9"
uvicorn = "^0.31.1"
dynaconf = "^3.2.6"
asyncpg = "^0.29.0"
redis = "^5.1.1"
alembic = "^1.13.3"
requests = "^2.32.3"
aio-pika = "^9.4.3"
logging = "^0.4.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-xdist = "^3.6.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
